# Swarm

./: CMakeLists.txt  LICENSE.md  README.md
CMake/: FindSwarm.cmake
source/: ComputeSystem.h  Helpers.cpp  Helpers.h  Hierarchy.cpp  Hierarchy.h  Layer.h  LayerConv.cpp  LayerConv.h  LayerPool.cpp  LayerPool.h  Optimizer.h  OptimizerDynamic.cpp  OptimizerDynamic.h  OptimizerMAB.cpp  OptimizerMAB.h
source/swarm/: ComputeSystem.h  Helpers.cpp  Hierarchy.h  Layer.h  LayerConv.cpp  LayerPool.h  Optimizer.h  OptimizerMAB.cpp  OptimizerMAB.h
